src/test/ui/type-alias-impl-trait/generic_nondefining_use.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/generic_nondefining_use.rs:14:21
   |
LL | fn concrete_ty() -> OneTy<u32> {
   |                     ^^^^^^^^^^
   |
note: used non-generic type `u32` for generic parameter
  --> $DIR/generic_nondefining_use.rs:8:12
   |
LL | type OneTy<T> = impl Debug;
   |            ^

error: non-defining opaque type use in defining scope
  --> $DIR/generic_nondefining_use.rs:19:27
   |
LL | type OneLifetime<'a> = impl Debug;
   |                  -- cannot use static lifetime; use a bound lifetime instead or remove the lifetime parameter from the opaque type
...
LL | fn concrete_lifetime() -> OneLifetime<'static> {
   |                           ^^^^^^^^^^^^^^^^^^^^

error: non-defining opaque type use in defining scope
  --> $DIR/generic_nondefining_use.rs:24:24
   |
LL | fn concrete_const() -> OneConst<{123}> {
   |                        ^^^^^^^^^^^^^^^
   |
note: used non-generic constant `{123}` for generic parameter
  --> $DIR/generic_nondefining_use.rs:10:21
   |
LL | type OneConst<const X: usize> = impl Debug;
   |                     ^

error: aborting due to 3 previous errors

